--- a/words/15-dates.Rmd
+++ b/words/15-dates.Rmd
@@ -255,17 +255,28 @@ of the plot were published and updated a long time ago. Datasets towards
 the top-right were published and updated recently. Datasets towards the
 bottom-right were published a long time ago and updated recently.
 
-
 ```{r publish_v_update}
 p9
 ```
-<!-- put these annotations in the plot-->
 
 I didn't really look into why there were so many updates a long
 time ago and so few in between, but I suspect it has something to do
 with how all of these portals are managed by Socrata; there might have
 been some change in software or in technical support practices that
 would have impacted all of the portals.
+
+### Which old datasets are still kept up-to-date?
+Recall that the points at the bottom-right of the previous plot
+correspond to old datasets that have been updated recently. Let's
+look more closely at these.
+
+I selected the datasets that were uploaded before 2013 and have
+been updated during 2013; they are represented the ones contained
+by the rectangle in the plot below.
+
+```{r publish_v_update_2013}
+p9
+```
 
 ## The bigger picture
 I thought this was going to be an article about a measure for how up-to-date
