--- a/words/15-dates.Rmd
+++ b/words/15-dates.Rmd
@@ -1,6 +1,11 @@
 ---
-title: 
+title: Determining how up-to-date your data catalog is
+description: I looked at data from a bunch of open data catalogs, and it turns out that pretty much none of the datasets I was looking at have ever been updated.
+twitter_description: By any
 tags: ['open-data']
+created_at: 2013-11-22
+kind: article
+tweet_text: I’d assumed that people actually update their data, but it looks like people don’t.
 ---
 ```{r configure, echo = F}
 source('15-dates.r')
@@ -161,6 +166,12 @@ p1
 It looks like most data were "updated" only at their time of their
 initial publication. Colloquially, we'd say that they haven't been
 updated ever. But there are some spikes here and there.
+
+Also, it appears that only certain kinds of data get updated.
+
+```{r viewType_table}
+table(socrata.deduplicated$viewType, is.na(socrata.deduplicated$rowsUpdatedAt))
+```
 
 This is a bit complicated; let's try to come up with simpler measure
 for taking this in.
