--- a/words/15-dates.Rmd
+++ b/words/15-dates.Rmd
@@ -1,11 +1,12 @@
 ---
-title: Determining how up-to-date your data catalog is
+title: How up-to-date is your data catalog?
 description: I looked at data from a bunch of open data catalogs, and it turns out that pretty much none of the datasets I was looking at have ever been updated.
-twitter_description: By any
 tags: ['open-data']
 created_at: 2013-11-22
 kind: article
 tweet_text: I’d assumed that people actually update their data, but it looks like people don’t.
+twitter_image: figure/small_samples.png
+facebook_image: figure/small_samples.png
 ---
 ```{r configure, echo = F}
 source('15-dates.r')
